<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="app_name">空气管家</string>
    <string name="warn_sdcard_miss">SD卡无法读取，请检查SD卡。</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="use_rom">使用ROM存储</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="close">关闭</string>
    <string name="update_title">开始下载更新</string>
    <string name="update_content">下载更新中...%1$d%%</string>
    <string name="err_on_network">网络无法链接，请检查网络是否链接正常。</string>
    <string name="err_network">网络延迟，请检查网络或重试。</string>
    <string name="err_system">系统错误</string>
    <string name="error_get_skin">获取皮肤出错，请检查是否已下载皮肤</string>
    <string name="err_network_ont_wifi">您的网络不是WIFI，请先链接WIFI</string>
    <string name="err_not_support">不支持的命令类型。</string>
    <string name="err_not_access">设备不在线，请检查设备网络是否正常。</string>
    <string name="err_not_auth">连接中断，请返回设备列表重新登陆。</string>
    <string name="err_auth_fail">认证失败，请进入局域网重新刷新设备。</string>
    <string name="err_default">登陆异常，请退出重新登陆。</string>
    <string name="err_not_network_pause">网络暂停</string>
    <string name="err_not_init">网络未初始化</string>
    <string name="err_no_memory">分配不到内存</string>
    <string name="err_not_exist">设备不存在</string>
    <string name="device_reset">正在初始化</string>
    <string name="wating">等待中</string>
    <string name="new_off_line">离线状态</string>
    <string name="new_off_remote">远程状态</string>
    <string name="new_off_local">本地状态</string>
    <string name="name">名称</string>
    <string name="device_lock">锁定设备</string>
    <string name="mac">Mac:</string>
    <string name="user_name">用户名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="login_password">登录密码</string>
    <string name="remember_username">记住密码</string>
    <string name="regist_new">立即注册</string>
    <string name="login">登录</string>
    <string name="on_home_mode">在家模式进入</string>
    <string name="add_device">添加设备</string>
    <string name="logining">登录中...</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="err_serial_number">序列号错误，请重新输入</string>
    <string name="hint_frist_login_hint">首次登录请先注册</string>
    <string name="register">注册</string>
    <string name="deviceManage">设备管理</string>
    <string name="registering">注册中...</string>
    <string name="password_hint">6-12位字母或字符组成的密码</string>
    <string name="comfim_password">确认密码:</string>
    <string name="password_hint_agin">再次输入密码:</string>
    <string name="phone_num">手机号:</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="email">邮箱:</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="user_name_hint">6-12位字母或字符组成的帐号</string>
    <string name="err_username">请输入6-12位字母或字符组成的帐号</string>
    <string name="err_password">请输入6-12位字母或字符组成的密码</string>
    <string name="password_inconformity">两次密码不一致</string>
    <string name="err_phone">手机号码错误</string>
    <string name="err_email">邮箱格式错误</string>
    <string name="user_agreement">用户协议</string>
    <string name="err_user_agreement">请先同意用户协议</string>
    <string name="air">空气</string>
    <string name="device_mange">设备管理</string>
    <string name="eair">空气质量</string>
    <string name="un_open">未开启</string>
    <string name="open">已开启</string>
    <string name="saving">保存中...</string>
    <string name="edit_name">修改名称</string>
    <string name="scan_qr">扫描条形码</string>
    <string name="delete_device_hint">确认要删除这个设备吗？</string>
    <string name="silence">节能</string>
    <string name="handle">手动</string>
    <string name="flz">负离子</string>
    <string name="auto">自动</string>
    <string name="sleep">睡眠</string>
    <string name="kill">杀菌</string>
    <string name="hepa">HEPA</string>
    <string name="filter_info">滤网信息</string>
    <string name="room_air">室内空气质量</string>
    <string name="click_start">点击立即运行</string>
    <string name="standby">待机</string>
    <string name="air_bad">污染</string>
    <string name="air_bader">重污染</string>
    <string name="air_normal">轻污染</string>
    <string name="air_good">良</string>
    <string name="air_best">优</string>
    <string name="notkown">未知</string>
    <string name="timer">定时</string>
    <string name="hour">小时</string>
    <string name="format_time">%1$s小时</string>
    <string name="format_wind">风量 %1$s</string>
    <string name="wind">风量</string>
    <string name="time">时间</string>
    <string name="time_0">0H</string>
    <string name="time_1">1H</string>
    <string name="time_4">4H</string>
    <string name="time_8">8H</string>
    <string name="wind_1">1档</string>
    <string name="wind_2">2档</string>
    <string name="wind_3">3档</string>
    <string name="wind_4">4档</string>
    <string name="mode_night">夜间模式</string>
    <string name="pm_best">优</string>
    <string name="pm_good">良</string>
    <string name="pm_mild">轻度污染</string>
    <string name="pm_mezzo">中度污染</string>
    <string name="pm_severe">重度污染</string>
    <string name="pm_severity">严重污染</string>
    <string name="config_page_hint">添加一个新设备到WIFI网络</string>
    <string name="ssid">WiFi名称:</string>
    <string name="wifi_password">WiFi密码:</string>
    <string name="show_password">显示密码</string>
    <string name="start">开始配置</string>
    <string name="configing_hint">正在配置,请稍等...</string>
    <string name="config_fail">配置失败</string>
    <string name="config_success">配置成功</string>
    <string name="click_open">点击开启</string>
    <string name="click_input">手动输入</string>
    <string name="filter_case">滤网情况</string>
    <string name="delay_time">剩余时间</string>
    <string name="net">购买网站</string>
    <string name="net_value">http://shop.tcl.com/tcl360/index.html</string>
    <string name="server_tel">服务电话</string>
    <string name="server_tel_value">4008-123456-5</string>
    <string name="hint">提示</string>
    <string name="call_phone_hint">是否拨打服务电话：4008-123456-5？</string>
    <string name="format_location_pm">%1$s空气指数</string>
   	<string name="format_location_weather">%1$s %2$s~%3$s</string>
    <string name="get_weather">获取中...</string>
    <string name="faq">常见问题</string>
    <string name="air_err">故障错误</string>
    <string name="err_motor">电机存在故障</string>
    <string name="err_air_sensor">空气质量传感器存在故障</string>
    <string name="un_install_360_weather">未安装360天气应用，请先安装</string>
    <string name="scan_qr_hint">请将条形码放入框内</string>
    <string name="upload_device_info">激活设备</string>
    <string name="uploading">上传中...</string>
    <string name="confim_upload">确认上传</string>
    <string name="qr_info">机身编码:</string>
    <string name="input_qr_info">请手动输入</string>
    <string name="upload_device">设备名称:</string>
    <string name="call_server"></string>
    <string name="aqi">本地空气质量指数(AQI)</string>
    <string name="aqibycity">空气质量指数</string>
    <string name="netError">请检查网络或者设备配置，稍后再试</string>
    <string name="handlelj">需要手动连接%1$热点</string>
    <string name="notsb1">设备还没有注册到服务器，稍后再试</string>
    <string name="netException">操作超时，请稍后再试</string>
    <string name="dooropen">空气净化器门打开了，关闭后重试</string>
    <string name="passwordfail">输入密码不正确，检查后重新输入</string>
    <string name="notwifi">初次使用，选择wifi联网</string>
    <string name="configDevice">开始配置需要用wifi联网</string>
    <string name="addDevice">添加设备需要用wifi联网</string>
    <string name="notNet">没有网络，请联网</string>
    <string name="initData">初始化数据失败，请稍后再试</string>
    <string name="notusername">用户名不能为空</string>
    <string name="notdevicename">设备名称不能为空</string>
    <string name="inconusername">用户名不是6-12字母或者字符组成的账号</string>
    <string name="inconpassword">密码不是6-12字母或者字符组成的账号</string>
    <string name="inconconfigpassword">确认密码不是6-12字母或者字符组成的账号</string>
    <string name="notpassword">密码不能为空</string>
    <string name="notcofigpassword">确认密码不能为空</string>
    <string name="notyz">密码和确认密码不一致</string>
    <string name="notphonenum">手机号码不为空</string>
    <string name="inconphonenum">手机号码格式不正确</string>
    <string name="notemail">email不为空</string>
    <string name="notReg">注册失败稍后再试</string>
    <string name="existUser">该用户名已经存在了，请更换一个</string>
    <string name="loginfail">登陆失败,请检查网络稍后再试</string>
    <string name="notUser">用户名或者密码不正确，检查后再试</string>
    <string name="notrd">没有找到用户添加的设备，检查一下机身序列号或者查看一下设备配置可正确</string>
    <string name="notsb">没有找到可用的设备，查看一下设备配置可正确</string>
    <string name="passwordNUll">密码不能为空</string>
    <string name="connSbFail">连接设备失败，稍后再试</string>
    <string name="configFail">配置失败，检查wifi或者wifi密码是否正确</string>
    <string name="netfail">网络异常，稍后再试</string>
    <string name="windlev">风量</string>
    <string name="gd">高档</string>
    <string name="zd">中档</string>
    <string name="dd">低档</string>
    <string name="jy">静音</string>
    <string name="back">返回</string>
    <string name="airdevice">YOAU空气净化器</string>
    <string name="lockbutton">解锁按键</string>
    <string name="notrename">修改失败稍后再试</string>
</resources>
