<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/gb_w" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/title_layout" android:background="@color/color_green" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageButton android:id="@id/btn_return" android:background="@null" android:layout_width="50.0dip" android:layout_height="45.0dip" android:src="@drawable/return1" />
        <TextView android:textSize="21.0sp" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginRight="60.0dip" android:text="@string/filter_case" android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delay_time" />
        <TextView android:textSize="36.0sp" android:textColor="@color/color_filter_text" android:id="@id/delay_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="1415小时" />
    </LinearLayout>
    <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net" />
        <TextView android:textSize="16.0sp" android:textColor="@color/color_filter_text" android:id="@id/net" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/net_value" />
    </LinearLayout>
    <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_tel" />
        <TextView android:textSize="16.0sp" android:textColor="@color/color_filter_text" android:id="@id/server_tel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/server_tel_value" />
    </LinearLayout>
    <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
</LinearLayout>
