<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:orientation="horizontal" >

            <Button
                android:id="@id/addback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-6dip"
                android:layout_marginTop="-2dip"
                android:background="@drawable/left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dip"
                android:text="@string/add_device"
                android:textColor="#47AEB7"
                android:textSize="20.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0px"
            android:background="#47AEB7" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="20.0px" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dip"
            android:gravity="center_vertical"
            android:minHeight="45.0dip"
            android:orientation="horizontal"
            android:padding="5.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_info"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />

            <EditText
                android:id="@id/qr_info"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_qr_info"
                android:textColor="@color/color_black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#47AEB7" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="45.0dip"
            android:orientation="horizontal"
            android:padding="5.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_password"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />

            <EditText
                android:id="@id/addPassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_qr_info"
                android:inputType="textPassword"
                android:textColor="@color/color_black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#47AEB7" />
    </LinearLayout>
    <CheckBox
        android:id="@id/pass_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:button="@drawable/check_box"
        android:text="@string/show_password"
        android:textColor="#ff000000"
        android:textSize="16.0sp" />
    <Button
        android:id="@id/btn_upload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_selector"
        android:text="@string/start"
        android:textColor="#ffffffff"
        android:textSize="21.0sp" />

    <LinearLayout
        android:id="@id/config_layout"
        android:layout_width="fill_parent"
        android:layout_height="130dip"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configing_hint"
            android:textColor="@color/color_gray"
            android:textSize="16.0sp" />

        <ProgressBar
            android:layout_width="63.0dip"
            android:layout_height="63.0dip"
            android:layout_marginTop="20.0dip"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/config_progress_bg" />
    </LinearLayout>

    

</LinearLayout>