<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/gb_w" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/err_motor" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/color_filter_warn_text" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/err_motor" />
        <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/err_air_sensor" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/color_filter_warn_text" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/err_air_sensor" />
        <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/call_server" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/color_green" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/call_server" />
        <View android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
</LinearLayout>
