<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10.0dip" >

    <LinearLayout
        android:id="@id/config_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configing_hint"
            android:textColor="@color/color_black"
            android:textSize="16.0sp" />

        <ProgressBar
            android:layout_width="63.0dip"
            android:layout_height="63.0dip"
            android:layout_marginTop="20.0dip"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/config_progress_bg" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/config_start_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:orientation="vertical"
        android:padding="30.0dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_page_hint"
            android:textColor="@color/color_gray"
            android:textSize="16.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssid"
                android:textColor="@color/color_black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/ssid"
                android:layout_width="fill_parent"
                android:layout_height="25.0dip"
                android:layout_marginLeft="5.0dip"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textSize="18.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0px"
            android:layout_marginTop="-5px"
            android:background="#47AEB7" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_password"
                android:textColor="@color/color_black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/password"
                android:layout_width="fill_parent"
                android:layout_height="25.0dip"
                android:layout_marginLeft="5.0dip"
                android:background="@null"
                android:inputType="textPassword"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textSize="18.0sp" />
        </LinearLayout>
        <View
                android:layout_width="fill_parent"
                android:layout_height="2.0px"
                android:layout_marginTop="-5px"
                android:background="#47AEB7" />

        <CheckBox
            android:id="@id/pass_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:button="@drawable/check_box"
            android:text="@string/show_password"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />
    </LinearLayout>

    <Button
        android:id="@id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="37.0dip"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10.0dip"
        android:background="@drawable/btn_selector"
        android:text="@string/start"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />

</FrameLayout>